# pyCGMS

./: .gitignore  README.md  pyproject.toml
pycgms/: Wofost71_PP.conf  Wofost71_WLP_FD.conf  __init__.py  data_providers.py  runner.py
